# ucl-humanitarian-management-system-CLI

./: Installation_Mac.applescript  Installation_Win.bat  README.md  pyproject.toml  requirements.txt  resourceUnallocatedStock.csv  setup.py
Installation_Mac.app/Contents/: Info.plist
data_analysis/: map.html  refugee_data.py
draft_skeleton_MCJ/: admin.py  camp.py  event.py  helper.py  main.py  refugee.py  resources.py  volunteer.py
draft_skeleton_MCJ/data/: eventTesting.csv  medicalInfoType.csv  resourceAllocation.csv  resourceStock.csv  roleType.csv  user.csv  userTesting.csv
humanitarian_management_system/: New_Refugees.csv  controller.py  helper.py  main.py  main.spec
humanitarian_management_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
humanitarian_management_system/data/: camp.csv  campTest.csv  countries.csv  country.csv  event.csv  eventTesting.csv  family.csv  maxUsedEid.csv  medicalInfo.csv  medicalInfoType.csv  messageBox.csv  refugee.csv  refugeeTest.csv  refugeeTest1.csv  resourceAllocation.csv  resourceStock.csv  resourceType.csv  resourceUnallocatedStock.csv  roleType.csv  trainingSessions.csv  user.csv
humanitarian_management_system/data_analysis/: age_distribution.py  camp_data_visualization.py  gender_distribution.py  medical_info.py  num_camp.py  resources_distribution.py  visualization_v.py
humanitarian_management_system/models/: __init__.py  admin.py  camp.py  event.py  refugee.py  refugeeTesting.py  refugee_legal_and_mental_health_testing.py  user.py  (+12 more)
visualization/: map.html  visualization.py
(+11 files in other folders)
